parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BITWISE_NOT
    CLOSE_BRACE
    OPEN_BRACE

Grammar

Rule 0     S' -> program
Rule 1     program -> program declaration
Rule 2     program -> empty
Rule 3     statement -> declaration
Rule 4     statement -> expression_statement
Rule 5     declaration -> type declaration_list SEMICOLON
Rule 6     declaration -> declaration_without_type SEMICOLON
Rule 7     declaration_list -> declaration_item
Rule 8     declaration_list -> declaration_list COMMA declaration_item
Rule 9     declaration_item -> IDENTIFIER
Rule 10    declaration_item -> IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET
Rule 11    declaration_item -> IDENTIFIER ASSIGN expression
Rule 12    declaration_item -> IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN expression
Rule 13    declaration_item -> IDENTIFIER ASSIGN float_constant
Rule 14    declaration_item -> IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN float_constant
Rule 15    declaration_without_type -> IDENTIFIER
Rule 16    declaration_without_type -> IDENTIFIER ASSIGN expression
Rule 17    declaration_without_type -> IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET
Rule 18    declaration_without_type -> IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN expression
Rule 19    declaration_without_type -> IDENTIFIER ASSIGN float_constant
Rule 20    declaration_without_type -> IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN float_constant
Rule 21    type -> INTEGER
Rule 22    type -> CHAR
Rule 23    type -> FLOAT
Rule 24    type -> DOUBLE
Rule 25    expression -> additive_expression
Rule 26    expression -> conditional_expression
Rule 27    expression -> expression LOGICAL_OR expression
Rule 28    expression -> expression LOGICAL_AND expression
Rule 29    expression -> expression BITWISE_OR expression
Rule 30    expression -> expression BITWISE_XOR expression
Rule 31    expression -> expression BITWISE_AND expression
Rule 32    expression -> expression EQUALS expression
Rule 33    expression -> expression NOT_EQUALS expression
Rule 34    expression -> expression LESS_THAN expression
Rule 35    expression -> expression GREATER_THAN expression
Rule 36    expression -> expression LESS_EQUALS expression
Rule 37    expression -> expression GREATER_EQUALS expression
Rule 38    expression -> expression SHIFT_LEFT expression
Rule 39    expression -> expression SHIFT_RIGHT expression
Rule 40    expression_statement -> expression SEMICOLON
Rule 41    assignment_expression -> conditional_expression
Rule 42    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 43    conditional_expression -> logical_or_expression
Rule 44    conditional_expression -> logical_or_expression CONDITIONAL_OPERATOR expression COLON conditional_expression
Rule 45    conditional_expression -> logical_or_expression CONDITIONAL_OPERATOR expression COMMA conditional_expression
Rule 46    logical_or_expression -> logical_and_expression
Rule 47    logical_or_expression -> logical_or_expression LOGICAL_OR logical_and_expression
Rule 48    logical_or_expression -> conditional_expression
Rule 49    logical_and_expression -> bitwise_or_expression
Rule 50    logical_and_expression -> logical_and_expression LOGICAL_AND bitwise_or_expression
Rule 51    bitwise_or_expression -> bitwise_xor_expression
Rule 52    bitwise_or_expression -> bitwise_or_expression BITWISE_OR bitwise_xor_expression
Rule 53    bitwise_xor_expression -> bitwise_and_expression
Rule 54    bitwise_xor_expression -> bitwise_xor_expression BITWISE_XOR bitwise_and_expression
Rule 55    bitwise_and_expression -> equality_expression
Rule 56    bitwise_and_expression -> bitwise_and_expression BITWISE_AND equality_expression
Rule 57    equality_expression -> relational_expression
Rule 58    equality_expression -> equality_expression EQUALS relational_expression
Rule 59    equality_expression -> equality_expression NOT_EQUALS relational_expression
Rule 60    relational_expression -> shift_expression
Rule 61    relational_expression -> relational_expression LESS_THAN shift_expression
Rule 62    relational_expression -> relational_expression GREATER_THAN shift_expression
Rule 63    relational_expression -> relational_expression LESS_EQUALS shift_expression
Rule 64    relational_expression -> relational_expression GREATER_EQUALS shift_expression
Rule 65    shift_expression -> additive_expression
Rule 66    shift_expression -> shift_expression SHIFT_LEFT additive_expression
Rule 67    shift_expression -> shift_expression SHIFT_RIGHT additive_expression
Rule 68    additive_expression -> multiplicative_expression
Rule 69    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 70    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 71    multiplicative_expression -> unary_expression
Rule 72    multiplicative_expression -> multiplicative_expression MUL unary_expression
Rule 73    multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 74    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 75    unary_expression -> postfix_expression
Rule 76    unary_expression -> BITWISE_AND unary_expression
Rule 77    unary_expression -> TIMES unary_expression
Rule 78    unary_expression -> PLUS unary_expression
Rule 79    unary_expression -> MINUS unary_expression
Rule 80    unary_expression -> LOGICAL_NOT unary_expression
Rule 81    unary_expression -> INCREMENT unary_expression
Rule 82    unary_expression -> DECREMENT unary_expression
Rule 83    postfix_expression -> primary_expression
Rule 84    postfix_expression -> postfix_expression OPEN_PAREN CLOSE_PAREN
Rule 85    postfix_expression -> postfix_expression OPEN_BRACKET expression CLOSE_BRACKET
Rule 86    postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 87    postfix_expression -> postfix_expression ARROW IDENTIFIER
Rule 88    postfix_expression -> postfix_expression INCREMENT
Rule 89    postfix_expression -> postfix_expression DECREMENT
Rule 90    primary_expression -> IDENTIFIER
Rule 91    primary_expression -> CONSTANT
Rule 92    primary_expression -> STRING_CONSTANT
Rule 93    primary_expression -> FLOAT
Rule 94    primary_expression -> OPEN_PAREN expression CLOSE_PAREN
Rule 95    basic_expression -> unary_expression
Rule 96    basic_expression -> basic_expression PLUS basic_expression
Rule 97    basic_expression -> basic_expression MINUS basic_expression
Rule 98    basic_expression -> basic_expression MUL basic_expression
Rule 99    basic_expression -> basic_expression DIV basic_expression
Rule 100   basic_expression -> basic_expression MOD basic_expression
Rule 101   basic_expression -> basic_expression INCREMENT
Rule 102   basic_expression -> basic_expression DECREMENT
Rule 103   constant -> INTEGER
Rule 104   constant -> CHAR
Rule 105   constant -> float_constant
Rule 106   integer_constant -> INTEGER
Rule 107   integer_constant -> FLOAT
Rule 108   integer_constant -> MINUS INTEGER
Rule 109   integer_constant -> MINUS FLOAT
Rule 110   float_constant -> FLOAT
Rule 111   float_constant -> MINUS FLOAT
Rule 112   assignment_operator -> =
Rule 113   empty -> <empty>

Terminals, with rules where they appear

=                    : 112
ARROW                : 87
ASSIGN               : 11 12 13 14 16 18 19 20
BITWISE_AND          : 31 56 76
BITWISE_NOT          : 
BITWISE_OR           : 29 52
BITWISE_XOR          : 30 54
CHAR                 : 22 104
CLOSE_BRACE          : 
CLOSE_BRACKET        : 10 12 14 17 18 20 85
CLOSE_PAREN          : 84 94
COLON                : 44
COMMA                : 8 45
CONDITIONAL_OPERATOR : 44 45
CONSTANT             : 10 12 14 17 18 20 91
DECREMENT            : 82 89 102
DIV                  : 73 99
DOT                  : 86
DOUBLE               : 24
EQUALS               : 32 58
FLOAT                : 23 93 107 109 110 111
GREATER_EQUALS       : 37 64
GREATER_THAN         : 35 62
IDENTIFIER           : 9 10 11 12 13 14 15 16 17 18 19 20 86 87 90
INCREMENT            : 81 88 101
INTEGER              : 21 103 106 108
LESS_EQUALS          : 36 63
LESS_THAN            : 34 61
LOGICAL_AND          : 28 50
LOGICAL_NOT          : 80
LOGICAL_OR           : 27 47
MINUS                : 70 79 97 108 109 111
MOD                  : 74 100
MUL                  : 72 98
NOT_EQUALS           : 33 59
OPEN_BRACE           : 
OPEN_BRACKET         : 10 12 14 17 18 20 85
OPEN_PAREN           : 84 94
PLUS                 : 69 78 96
SEMICOLON            : 5 6 40
SHIFT_LEFT           : 38 66
SHIFT_RIGHT          : 39 67
STRING_CONSTANT      : 92
TIMES                : 77
error                : 

Nonterminals, with rules where they appear

additive_expression  : 25 65 66 67 69 70
assignment_expression : 42
assignment_operator  : 42
basic_expression     : 96 96 97 97 98 98 99 99 100 100 101 102
bitwise_and_expression : 53 54 56
bitwise_or_expression : 49 50 52
bitwise_xor_expression : 51 52 54
conditional_expression : 26 41 44 45 48
constant             : 
declaration          : 1 3
declaration_item     : 7 8
declaration_list     : 5 8
declaration_without_type : 6
empty                : 2
equality_expression  : 55 56 58 59
expression           : 11 12 16 18 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 44 45 85 94
expression_statement : 4
float_constant       : 13 14 19 20 105
integer_constant     : 
logical_and_expression : 46 47 50
logical_or_expression : 43 44 45 47
multiplicative_expression : 68 69 70 72 73 74
postfix_expression   : 75 84 85 86 87 88 89
primary_expression   : 83
program              : 1 0
relational_expression : 57 58 59 61 62 63 64
shift_expression     : 60 61 62 63 64 66 67
statement            : 
type                 : 5
unary_expression     : 42 71 72 73 74 76 77 78 79 80 81 82 95

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program declaration
    (2) program -> . empty
    (113) empty -> .

    INTEGER         reduce using rule 113 (empty -> .)
    CHAR            reduce using rule 113 (empty -> .)
    FLOAT           reduce using rule 113 (empty -> .)
    DOUBLE          reduce using rule 113 (empty -> .)
    IDENTIFIER      reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . declaration
    (5) declaration -> . type declaration_list SEMICOLON
    (6) declaration -> . declaration_without_type SEMICOLON
    (21) type -> . INTEGER
    (22) type -> . CHAR
    (23) type -> . FLOAT
    (24) type -> . DOUBLE
    (15) declaration_without_type -> . IDENTIFIER
    (16) declaration_without_type -> . IDENTIFIER ASSIGN expression
    (17) declaration_without_type -> . IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET
    (18) declaration_without_type -> . IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN expression
    (19) declaration_without_type -> . IDENTIFIER ASSIGN float_constant
    (20) declaration_without_type -> . IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN float_constant

    INTEGER         shift and go to state 6
    CHAR            shift and go to state 7
    FLOAT           shift and go to state 8
    DOUBLE          shift and go to state 9
    IDENTIFIER      shift and go to state 10

    declaration                    shift and go to state 3
    type                           shift and go to state 4
    declaration_without_type       shift and go to state 5

state 2

    (2) program -> empty .

    INTEGER         reduce using rule 2 (program -> empty .)
    CHAR            reduce using rule 2 (program -> empty .)
    FLOAT           reduce using rule 2 (program -> empty .)
    DOUBLE          reduce using rule 2 (program -> empty .)
    IDENTIFIER      reduce using rule 2 (program -> empty .)
    $end            reduce using rule 2 (program -> empty .)


state 3

    (1) program -> program declaration .

    INTEGER         reduce using rule 1 (program -> program declaration .)
    CHAR            reduce using rule 1 (program -> program declaration .)
    FLOAT           reduce using rule 1 (program -> program declaration .)
    DOUBLE          reduce using rule 1 (program -> program declaration .)
    IDENTIFIER      reduce using rule 1 (program -> program declaration .)
    $end            reduce using rule 1 (program -> program declaration .)


state 4

    (5) declaration -> type . declaration_list SEMICOLON
    (7) declaration_list -> . declaration_item
    (8) declaration_list -> . declaration_list COMMA declaration_item
    (9) declaration_item -> . IDENTIFIER
    (10) declaration_item -> . IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET
    (11) declaration_item -> . IDENTIFIER ASSIGN expression
    (12) declaration_item -> . IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN expression
    (13) declaration_item -> . IDENTIFIER ASSIGN float_constant
    (14) declaration_item -> . IDENTIFIER OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN float_constant

    IDENTIFIER      shift and go to state 13

    declaration_list               shift and go to state 11
    declaration_item               shift and go to state 12

state 5

    (6) declaration -> declaration_without_type . SEMICOLON

    SEMICOLON       shift and go to state 14


state 6

    (21) type -> INTEGER .

    IDENTIFIER      reduce using rule 21 (type -> INTEGER .)


state 7

    (22) type -> CHAR .

    IDENTIFIER      reduce using rule 22 (type -> CHAR .)


state 8

    (23) type -> FLOAT .

    IDENTIFIER      reduce using rule 23 (type -> FLOAT .)


state 9

    (24) type -> DOUBLE .

    IDENTIFIER      reduce using rule 24 (type -> DOUBLE .)


state 10

    (15) declaration_without_type -> IDENTIFIER .
    (16) declaration_without_type -> IDENTIFIER . ASSIGN expression
    (17) declaration_without_type -> IDENTIFIER . OPEN_BRACKET CONSTANT CLOSE_BRACKET
    (18) declaration_without_type -> IDENTIFIER . OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN expression
    (19) declaration_without_type -> IDENTIFIER . ASSIGN float_constant
    (20) declaration_without_type -> IDENTIFIER . OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN float_constant

    SEMICOLON       reduce using rule 15 (declaration_without_type -> IDENTIFIER .)
    ASSIGN          shift and go to state 15
    OPEN_BRACKET    shift and go to state 16


state 11

    (5) declaration -> type declaration_list . SEMICOLON
    (8) declaration_list -> declaration_list . COMMA declaration_item

    SEMICOLON       shift and go to state 17
    COMMA           shift and go to state 18


state 12

    (7) declaration_list -> declaration_item .

    SEMICOLON       reduce using rule 7 (declaration_list -> declaration_item .)
    COMMA           reduce using rule 7 (declaration_list -> declaration_item .)


state 13

    (9) declaration_item -> IDENTIFIER .
    (10) declaration_item -> IDENTIFIER . OPEN_BRACKET CONSTANT CLOSE_BRACKET
    (11) declaration_item -> IDENTIFIER . ASSIGN expression
    (12) declaration_item -> IDENTIFIER . OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN expression
    (13) declaration_item -> IDENTIFIER . ASSIGN float_constant
    (14) declaration_item -> IDENTIFIER . OPEN_BRACKET CONSTANT CLOSE_BRACKET ASSIGN float_constant

    SEMICOLON       reduce using rule 9 (declaration_item -> IDENTIFIER .)
    COMMA           reduce using rule 9 (declaration_item -> IDENTIFIER .)
    OPEN_BRACKET    shift and go to state 19
    ASSIGN          shift and go to state 20


state 14

    (6) declaration -> declaration_without_type SEMICOLON .

    INTEGER         reduce using rule 6 (declaration -> declaration_without_type SEMICOLON .)
    CHAR            reduce using rule 6 (declaration -> declaration_without_type SEMICOLON .)
    FLOAT           reduce using rule 6 (declaration -> declaration_without_type SEMICOLON .)
    DOUBLE          reduce using rule 6 (declaration -> declaration_without_type SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (declaration -> declaration_without_type SEMICOLON .)
    $end            reduce using rule 6 (declaration -> declaration_without_type SEMICOLON .)


state 15

    (16) declaration_without_type -> IDENTIFIER ASSIGN . expression
    (19) declaration_without_type -> IDENTIFIER ASSIGN . float_constant
    (25) expression -> . additive_expression
    (26) expression -> . conditional_expression
    (27) expression -> . expression LOGICAL_OR expression
    (28) expression -> . expression LOGICAL_AND expression
    (29) expression -> . expression BITWISE_OR expression
    (30) expression -> . expression BITWISE_XOR expression
    (31) expression -> . expression BITWISE_AND expression
    (32) expression -> . expression EQUALS expression
    (33) expression -> . expression NOT_EQUALS expression
    (34) expression -> . expression LESS_THAN expression
    (35) expression -> . expression GREATER_THAN expression
    (36) expression -> . expression LESS_EQUALS expression
    (37) expression -> . expression GREATER_EQUALS expression
    (38) expression -> . expression SHIFT_LEFT expression
    (39) expression -> . expression SHIFT_RIGHT expression
    (110) float_constant -> . FLOAT
    (111) float_constant -> . MINUS FLOAT
    (68) additive_expression -> . multiplicative_expression
    (69) additive_expression -> . additive_expression PLUS multiplicative_expression
    (70) additive_expression -> . additive_expression MINUS multiplicative_expression
    (43) conditional_expression -> . logical_or_expression
    (44) conditional_expression -> . logical_or_expression CONDITIONAL_OPERATOR expression COLON conditional_expression
    (45) conditional_expression -> . logical_or_expression CONDITIONAL_OPERATOR expression COMMA conditional_expression
    (71) multiplicative_expression -> . unary_expression
    (72) multiplicative_expression -> . multiplicative_expression MUL unary_expression
    (73) multiplicative_expression -> . multiplicative_expression DIV unary_expression
    (74) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (46) logical_or_expression -> . logical_and_expression
    (47) logical_or_expression -> . logical_or_expression LOGICAL_OR logical_and_expression
    (48) logical_or_expression -> . conditional_expression
    (75) unary_expression -> . postfix_expression
    (76) unary_expression -> . BITWISE_AND unary_expression
    (77) unary_expression -> . TIMES unary_expression
    (78) unary_expression -> . PLUS unary_expression
    (79) unary_expression -> . MINUS unary_expression
    (80) unary_expression -> . LOGICAL_NOT unary_expression
    (81) unary_expression -> . INCREMENT unary_expression
    (82) unary_expression -> . DECREMENT unary_expression
    (49) logical_and_expression -> . bitwise_or_expression
